2006/01/01	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.113.

2005/12/19	kaffeetisch

	* GObject.xs (gperl_register_object): Move around the loop that
	puts interface packages into @ISA so it gets run on every call to
	gperl_register_object.  With the old code, you ran into problems
	when a GInterface was registered after the last GObject had been
	registered.

2005/12/12	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.112.

2005/12/12	kaffeetisch

	* GType.xs: Hush a compiler warning.

	* MANIFEST.SKIP: Use the more correct G.+\.c$ instead of G*\.c$.

2005/11/30      ebassi

	* GKeyFile.xs: fix the argument types in order to allow 'undef' values.

	* t/g.t: new tests for the functions allowing undefined values.

2005/11/18	kaffeetisch

	* GType.xs Register the fundamentals for gint64 and guint64 as
	Glib::Int64 and Glib::UInt64 respectively.

2005/11/14	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.111.

2005/11/13	muppetman

	* GValue.xs, GObject.xs:  The GObject property interface passes around
	pointers to boxed objects, but does not transfer ownership of them.
	Thus, the old code was letting perl hold on to dead pointers.  We
	basically need to be able to specify whether to copy boxed objects
	when converting from GValue to SV.  Since gperl_sv_from_value() is
	public and API frozen, add a new private function,
	_gperl_sv_from_value_internal(), and call this from both
	gperl_sv_from_value() and Glib::Object::get().  Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=319204 and several other
	hard-to-diagnose intermittent bugs.

2005/11/12	kaffeetisch

	* xsapi.pod.head: Fix a few typos.

2005/10/18	kaffeetisch

	* Glib.pm, MANIFEST, MANIFEST.SKIP, Makefile.PL, NEWS, README:
	Unstable release 1.110.

2005/10/17	kaffeetisch

	* GParamSpec.xs, GType.xs, GValue.xs, gperl.h, typemap, t/64bit.t:
	Use custom converters for gint64 and guint64 that transform 64 bit
	integers to and from strings if perl's IV type isn't big enough.
