@@ -1,3 +1,9 @@
+2006/01/13	muppetman
+
+	* GObject.xs: Ignoring the undead flag in _gperl_fetch_wrapper_key()
+	resulted in crashes when manipulating properties of objects with
+	undead wrappers.
+
 2006/01/01	kaffeetisch
 
 	* Glib.pm, NEWS, README: Unstable release 1.113.
